# stm32f4-eth-poc

fw/: Cargo.toml  Embed.toml
fw/src/: main.rs
sw/: Cargo.toml
