[package]
name = "fw"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m-rtic = "0.5.3"
embedded-hal = "0.2.4"
log = "0.4"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
smoltcp = { version = "0.6", default-features = false }
stm32f4xx-hal = { version = "0.8.3", default-features = false, features = ["rt", "stm32f407"] }
#stm32-eth = { git = "https://github.com/stm32-rs/stm32-eth", branch = "master", features = ["smoltcp-log", "smoltcp-phy", "smoltcp-verbose", "stm32f407"] }
stm32-eth = { path = "../../stm32-eth", features = ["smoltcp-log", "smoltcp-phy", "smoltcp-verbose", "stm32f407"] }

[profile.release]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better (link time) optimisations
opt-level = "s"     # optimise for size
